installed dependencies - bootswatch now working

--- a/wwwsrc/src/assets/_variables.scss
+++ b/wwwsrc/src/assets/_variables.scss
@@ -1,4 +1,4 @@
-// Darkly 4.5.2
+// Sandstone 4.5.2
 // Bootswatch
 
 //
@@ -7,42 +7,41 @@
 
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
-$gray-200: #ebebeb !default;
-$gray-300: #dee2e6 !default;
+$gray-200: #f8f5f0 !default;
+$gray-300: #dfd7ca !default;
 $gray-400: #ced4da !default;
-$gray-500: #adb5bd !default;
-$gray-600: #888 !default;
-$gray-700: #444 !default;
-$gray-800: #303030 !default;
-$gray-900: #222 !default;
+$gray-500: #98978b !default;
+$gray-600: #8e8c84 !default;
+$gray-700: #495057 !default;
+$gray-800: #3e3f3a !default;
+$gray-900: #212529 !default;
 $black:    #000 !default;
 
-$blue:    #375a7f !default;
+$blue:    #325d88 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
-$red:     #e74c3c !default;
-$orange:  #fd7e14 !default;
-$yellow:  #f39c12 !default;
-$green:   #00bc8c !default;
+$red:     #d9534f !default;
+$orange:  #f47c3c !default;
+$yellow:  #ffc107 !default;
+$green:   #93c54b !default;
 $teal:    #20c997 !default;
-$cyan:    #3498db !default;
+$cyan:    #29abe0 !default;
 
 $primary:       $blue !default;
-$secondary:     $gray-700 !default;
+$secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
-$warning:       $yellow !default;
+$warning:       $orange !default;
 $danger:        $red !default;
-$light:         $gray-500 !default;
+$light:         $gray-200 !default;
 $dark:          $gray-800 !default;
 
-$yiq-contrasted-threshold:  175 !default;
+$yiq-contrasted-threshold:  170 !default;
 
 // Body
 
-$body-bg:                   $gray-900 !default;
-$body-color:                $white !default;
+$body-color:                $gray-800 !default;
 
 // Links
 
@@ -50,130 +49,95 @@ $link-color:                $success !default;
 
 // Fonts
 
-$font-family-sans-serif:      "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-family-sans-serif:      "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
-$font-size-base:              0.9375rem !default;
+$font-size-base:              0.875rem !default;
 
-$h1-font-size:                3rem !default;
-$h2-font-size:                2.5rem !default;
-$h3-font-size:                2rem !default;
-
-$text-muted:                  $gray-600 !default;
-
-// Tables
-
-$table-accent-bg:             $gray-800 !default;
-
-$table-border-color:          $gray-700 !default;
-
-// Forms
-
-$input-border-color:                    $body-bg !default;
-
-$input-group-addon-color:               $gray-500 !default;
-$input-group-addon-bg:                  $gray-700 !default;
-
-$custom-file-color:                 $gray-500 !default;
-$custom-file-border-color:          $body-bg !default;
+$headings-font-weight:        400 !default;
 
 // Dropdowns
 
-$dropdown-bg:                       $gray-900 !default;
-$dropdown-border-color:             $gray-700 !default;
-$dropdown-divider-bg:               $gray-700 !default;
+$dropdown-link-color:               $gray-600 !default;
+$dropdown-link-hover-color:         $dropdown-link-color !default;
+$dropdown-link-hover-bg:            $gray-200 !default;
 
-$dropdown-link-color:               $white !default;
-$dropdown-link-hover-color:         $white !default;
-$dropdown-link-hover-bg:            $primary !default;
+$dropdown-link-active-color:        $dropdown-link-color !default;
+$dropdown-link-active-bg:           $dropdown-link-hover-bg !default;
 
 // Navs
 
-$nav-link-padding-x:                2rem !default;
-$nav-link-disabled-color:           $gray-500 !default;
+$nav-link-padding-x:                0.9rem !default;
+$nav-link-disabled-color:           $gray-300 !default;
 
-$nav-tabs-border-color:             $gray-700 !default;
-$nav-tabs-link-hover-border-color:  $nav-tabs-border-color $nav-tabs-border-color transparent !default;
-$nav-tabs-link-active-color:        $white !default;
-$nav-tabs-link-active-border-color: $nav-tabs-border-color $nav-tabs-border-color transparent !default;
+$nav-tabs-border-color:             $gray-300 !default;
+$nav-tabs-link-hover-border-color:  $gray-300 !default;
+$nav-tabs-link-active-bg:           $white !default;
+
+$nav-pills-link-active-color:       $gray-600 !default;
+$nav-pills-link-active-bg:          $gray-200 !default;
 
 // Navbar
 
-$navbar-padding-y:                  1rem !default;
+$navbar-dark-hover-color:           $white !default;
 
-$navbar-dark-color:                rgba($white,.6) !default;
-$navbar-dark-hover-color:          $white !default;
-
-$navbar-light-color:                rgba($gray-900, .7) !default;
-$navbar-light-hover-color:          $gray-900 !default;
-$navbar-light-active-color:         $gray-900 !default;
-$navbar-light-toggler-border-color: rgba($gray-900, .1) !default;
+$navbar-light-hover-color:          $black !default;
+$navbar-light-active-color:         $black !default;
 
 // Pagination
 
-$pagination-color:                  $white !default;
-$pagination-bg:                     $success !default;
-$pagination-border-width:           0 !default;
-$pagination-border-color:           transparent !default;
+$pagination-color:                  $gray-600 !default;
+$pagination-bg:                     $gray-200 !default;
+$pagination-border-color:           $gray-300 !default;
 
-$pagination-hover-color:            $white !default;
-$pagination-hover-bg:               lighten($success, 10%) !default;
-$pagination-hover-border-color:     transparent !default;
+$pagination-hover-color:            $pagination-color !default;
 
-$pagination-active-bg:              $pagination-hover-bg !default;
-$pagination-active-border-color:    transparent !default;
+$pagination-active-color:           $pagination-color !default;
+$pagination-active-bg:              $gray-300 !default;
+$pagination-active-border-color:    $gray-300 !default;
 
-$pagination-disabled-color:         $white !default;
-$pagination-disabled-bg:            darken($success, 15%) !default;
-$pagination-disabled-border-color:  transparent !default;
-
-// Jumbotron
-
-$jumbotron-bg:                      $gray-800 !default;
+$pagination-disabled-color:         $gray-300 !default;
+$pagination-disabled-bg:            $gray-200 !default;
+$pagination-disabled-border-color:  $pagination-border-color !default;
 
 // Cards
 
-$card-cap-bg:                       $gray-700 !default;
-$card-bg:                           $gray-800 !default;
+$card-border-color:                 rgba($gray-300, .75) !default;
+$card-cap-bg:                       rgba($gray-200, .25) !default;
 
 // Popovers
 
-$popover-bg:                        $gray-800 !default;
-
-$popover-header-bg:                 $gray-700 !default;
-
-// Toasts
-
-$toast-background-color:            $gray-700 !default;
-
-$toast-header-background-color:     $gray-800 !default;
+$popover-header-bg:                 $gray-200 !default;
 
 // Modals
 
-$modal-content-bg:                  $gray-800 !default;
-$modal-content-border-color:        $gray-700 !default;
+$modal-content-border-color:        $gray-300 !default;
 
-$modal-header-border-color:         $gray-700 !default;
+$modal-header-border-color:         $modal-content-border-color !default;
 
 // Progress bars
 
-$progress-bg:                       $gray-700 !default;
+$progress-bg:                       $gray-300 !default;
+$progress-border-radius:            10px !default;
+$progress-bar-color:                $primary !default;
 
 // List group
 
-$list-group-bg:                     $gray-800 !default;
-$list-group-border-color:           $gray-700 !default;
+$list-group-border-color:           $gray-300 !default;
 
-$list-group-hover-bg:               $gray-700 !default;
+$list-group-hover-bg:               $gray-200 !default;
+$list-group-active-color:           $body-color !default;
+$list-group-active-bg:              $gray-200 !default;
+$list-group-active-border-color:    $gray-300 !default;
 
-// Breadcrumbs
+$list-group-disabled-color:         $gray-500 !default;
+$list-group-disabled-bg:            $white !default;
 
-$breadcrumb-bg:                     $gray-700 !default;
+$list-group-action-color:           $list-group-active-color !default;
+
+$list-group-action-active-color:    $list-group-active-color !default;
+$list-group-action-active-bg:       $gray-300 !default;
 
 // Close
 
-$close-color:                       $white !default;
 $close-text-shadow:                 none !default;
 
-// Code
-
-$pre-color:                         inherit !default;
