--- a/wwwsrc/src/assets/_overrides.scss
+++ b/wwwsrc/src/assets/_overrides.scss
@@ -1,27 +1,156 @@
-// Darkly 4.5.2
+// Sandstone 4.5.2
 // Bootswatch
 
 
 // Variables ===================================================================
 
-$web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400&display=swap" !default;
+$web-font-path: "https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" !default;
 @import url($web-font-path);
 
 // Navbar ======================================================================
 
-// Buttons =====================================================================
+.bg-primary {
+  background-color: $dark !important;
+}
 
-// Typography ==================================================================
+.bg-dark {
+  background-color: $secondary !important;
+}
 
-.blockquote {
-  &-footer {
-    color: $gray-600;
+.bg-light {
+  background-color: $gray-200 !important;
+}
+
+.sandstone {
+  font-size: 11px;
+  line-height: 22px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.navbar {
+  .nav-link {
+    @extend .sandstone;
+  }
+
+  &-form input,
+  &-form .form-control {
+    border: none;
   }
 }
+
+// Buttons =====================================================================
+
+.btn {
+  @extend .sandstone;
+
+  &:hover {
+    border-color: transparent;
+  }
+
+  &-success,
+  &-warning {
+    color: $white;
+  }
+}
+
+// Typography ==================================================================
 
 // Tables ======================================================================
 
 .table {
+  .thead-dark th {
+    background-color: $dark;
+  }
+}
+
+// Forms =======================================================================
+
+input,
+// .form-control {
+//   @include box-shadow(none);
+
+//   &:focus {
+//     @include box-shadow(none);
+//   }
+// }
+
+// Navs ========================================================================
+
+.nav-tabs {
+  .nav-link {
+    @extend .sandstone;
+    background-color: $gray-200;
+    border-color: $gray-300;
+  }
+
+  .nav-link,
+  .nav-link:hover,
+  .nav-link:focus {
+    color: $gray-600;
+  }
+
+  .nav-link.disabled,
+  .nav-link.disabled:hover,
+  .nav-link.disabled:focus {
+    background-color: $gray-200;
+    border-color: $gray-300;
+    color: $nav-link-disabled-color;
+  }
+}
+
+.nav-pills {
+  .nav-link {
+    @extend .sandstone;
+    border: 1px solid transparent;
+    color: $gray-600;
+  }
+
+  .nav-link.active,
+  .nav-link:hover,
+  .nav-link:focus {
+    background-color: $gray-200;
+    border-color: $gray-300;
+  }
+
+  .nav-link.disabled,
+  .nav-link.disabled:hover {
+    background-color: transparent;
+    border-color: transparent;
+    color: $gray-300;
+  }
+}
+
+
+.breadcrumb {
+  @extend .sandstone;
+  border: 1px solid $gray-300;
+}
+
+.pagination {
+  @extend .sandstone;
+
+  a:hover {
+    text-decoration: none;
+  }
+}
+
+.dropdown-menu {
+  .dropdown-item {
+    @extend .sandstone;
+  }
+}
+
+// Indicators ==================================================================
+
+.alert {
+  color: #fff;
+
+  a,
+  .alert-link {
+    color: #fff;
+    text-decoration: underline;
+  }
 
   &-primary {
     &, > th, > td {
@@ -32,18 +161,6 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0
   &-secondary {
     &, > th, > td {
       background-color: $secondary;
-    }
-  }
-
-  &-light {
-    &, > th, > td {
-      background-color: $light;
-    }
-  }
-
-  &-dark {
-    &, > th, > td {
-      background-color: $dark;
     }
   }
 
@@ -71,150 +188,48 @@ $web-font-path: "https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0
     }
   }
 
-  &-active {
+  &-dark {
     &, > th, > td {
-      background-color: $table-active-bg;
+      background-color: $dark;
     }
   }
 
-  &-hover {
-
-    .table-primary:hover {
-      &, > th, > td {
-        background-color: darken($primary, 5%);
-      }
+  &-light {
+    &, > th, > td {
+      background-color: $light;
     }
+  }
 
-    .table-secondary:hover {
-      &, > th, > td {
-        background-color: darken($secondary, 5%);
-      }
+  &-light {
+    &,
+    & a:not(.btn),
+    & .alert-link {
+      color: $body-color;
     }
-
-    .table-light:hover {
-      &, > th, > td {
-        background-color: darken($light, 5%);
-      }
-    }
-
-    .table-dark:hover {
-      &, > th, > td {
-        background-color: darken($dark, 5%);
-      }
-    }
-
-    .table-success:hover {
-      &, > th, > td {
-        background-color: darken($success, 5%);
-      }
-    }
-
-    .table-info:hover {
-      &, > th, > td {
-        background-color: darken($info, 5%);
-      }
-    }
-
-    .table-danger:hover {
-      &, > th, > td {
-        background-color: darken($danger, 5%);
-      }
-    }
-
-    .table-warning:hover {
-      &, > th, > td {
-        background-color: darken($warning, 5%);
-      }
-    }
-
-    .table-active:hover {
-      &, > th, > td {
-        background-color: $table-active-bg;
-      }
-    }
-
   }
 }
 
-// Forms =======================================================================
+.badge {
 
-.input-group-addon {
-  color: #fff;
-}
-
-// Navs ========================================================================
-
-.nav-tabs,
-.nav-pills {
-
-  .nav-link,
-  .nav-link.active,
-  .nav-link.active:focus,
-  .nav-link.active:hover,
-  .nav-item.open .nav-link,
-  .nav-item.open .nav-link:focus,
-  .nav-item.open .nav-link:hover {
-    color: #fff;
+  &-success,
+  &-warning {
+    color: $white;
   }
 }
 
-.breadcrumb a {
-  color: #fff;
+.tooltip {
+  @extend .sandstone;
 }
-
-.pagination {
-  a:hover {
-    text-decoration: none;
-  }
-}
-
-// Indicators ==================================================================
 
 .close {
-  opacity: 0.4;
+  color: $gray-300;
+  opacity: 1;
 
-  &:hover,
-  &:focus {
-    opacity: 1;
-  }
-}
-
-.alert {
-  border: none;
-  color: $white;
-
-  a,
-  .alert-link {
-    color: #fff;
-    text-decoration: underline;
-  }
-
-  @each $color, $value in $theme-colors {
-    &-#{$color} {
-      @if $enable-gradients {
-        background: $value linear-gradient(180deg, mix($white, $value, 15%), $value) repeat-x;
-      } @else {
-        background-color: $value;
-      }
-    }
+  &:hover {
+    color: darken($gray-300, 20%);
   }
 }
 
 // Progress bars ===============================================================
 
 // Containers ==================================================================
-
-
-.list-group-item-action {
-  color: #fff;
-
-  &:hover,
-  &:focus {
-    background-color: $gray-700;
-    color: #fff;
-  }
-
-  .list-group-item-heading {
-    color: #fff;
-  }
-}
